assets/css/style.css
/* ... */
.menu-active .nav-header .nav-wrapper-control .button{
	border:0;
	background-color:#D2493F;
	box-shadow: 0 0px 1px #063F07;
	}￼
/* .menu-active .nav-header .nav-wrapper-control .button:hover {
	box-shadow:none;
	border: 1px solid #373737;
}*/	/* hover state stick with first touch from green */






.nav-header .nav-wrapper{
	display:flex;
	max-height:calc(100vh - 6rem);
	/* padding:2rem 4rem; */
	padding: 2% 5%;	/* not inner, not subject to ori 5% */
	overflow-y:auto;
}
	@media only screen and (max-width: 640px){.nav-header .nav-wrapper{background:var(--text-dark);flex-direction:column}
		@supports (-webkit-backdrop-filter: blur(2rem)){
			.nav-header .nav-wrapper{background:rgba(34,36,38,0.9);-webkit-backdrop-filter:blur(2rem)}
		}
	}
	
	
	
	
	
	
	
	
.nav-header .logo{
	margin-right:3.1rem;
	display:none;
} 
	@media only screen and (max-width: 640px){.nav-header .logo{display:none}}
	
.nav-header .logo a{
	display:block;
	height:4rem;
	padding:0
}
.nav-header .logo a img{
	display:block;
	width:auto;
	height:4rem;
}
.nav-header ul{
	position:relative;
	display:flex;
	width:100%;
	margin:auto;
	padding:0;
	list-style:none;
	font-family:var(--site-font);
	margin-top:2vw;
	margin-left:2vw;
}
	@media only screen and (max-width: 640px){.nav-header ul{flex-direction:column;flex-shrink:0;padding:2rem 0}}
	
.nav-header ul:last-child{
	justify-content:flex-end
}
	@media only screen and (max-width: 640px){.nav-header ul:last-child{display:none}}
	
.nav-header li{
	position:relative;
	margin-right:3.1rem;
}
.nav-header li.active a:before{
	position:absolute;
	content:'';
	width:100%;
	height:3px;
	left:0;
	top:0;
	padding:0 1rem;
	margin-left:-1rem;
	margin-top:-1rem;
	/* background:#e05431; */
	/* background:#ff7a29; */
	background:#fa00f9;
}
	@media only screen and (max-width: 640px){.nav-header li.active a:before{
		left:0;
		top:50%;
		width:7px;
		height:7px;
		margin-left:0.8em;
		margin-top:-1px;
		border-radius:2px;
		padding:0;
	}}
	
.nav-header li.active a{
	/* color:var(--border-inverted); */
	font-weight:700;
	opacity:0.6;
}
	@media (prefers-color-scheme: dark){.nav-header li.active a{color:var(--border-inverted)}}
	@media only screen and (max-width: 640px){.nav-header li.active a{color:var(--text-light)}}
	
.nav-header li a{
	display:block;
	padding:1rem 0;
	font-size:1.5em;
	line-height:2rem;
	color:#909499;
	white-space:nowrap;
	text-overflow:ellipsis;
	text-decoration:none;
	font-weight:500;
	cursor:pointer;
	transition:color linear 0.1s;
}
	@media only screen and (max-width: 640px){
		.nav-header li a{
			font-size:2em;
			padding-left:2em;
		} 
		.nav-header li a:before{
			content:'';
			position:absolute;
			left:0;
			top:50%;
			width:0.5em;
			height:1px;
			margin-left:0.75em;
			margin-top:-1px;
			border-radius:2px;
			background:var(--border-inverted);}}
	@media only screen and (max-width: 640px) and (prefers-color-scheme: dark){.nav-header li a:before{background:var(--border-colour)}} /* make indicator colour always dark */
	
.nav-header li a:focus,.nav-header li a:hover{
	color:var(--border-inverted);
}
	@media only screen and (max-width: 640px){.nav-header li a:focus,.nav-header li a:hover{color:var(--border-colour)}}
	@media only screen and (max-width: 640px) and (prefers-color-scheme: dark){.nav-header li a:focus,.nav-header li a:hover{color:var(--border-inverted)}}
	
	
/* .nav-header li.nav-facebook,.nav-header li.nav-rss,.nav-header li.nav-search,.nav-header li.nav-subscribe,.nav-header li.nav-twitter{margin-right:1.5rem} */
/* .nav-header li.nav-facebook a,.nav-header li.nav-rss a,.nav-header li.nav-search a,.nav-header li.nav-subscribe a,.nav-header li.nav-twitter a{font-size:1.75em} */
/* .nav-header li.nav-facebook span,.nav-header li.nav-rss span,.nav-header li.nav-search span,.nav-header li.nav-subscribe span,.nav-header li.nav-twitter span{display:none} */
.nav-header li:last-child{
	margin-right:0;
}


.cover-active .nav-wrapper-control a{color:rgba(255,255,255,0.8)}
.cover-active .nav-wrapper-control a:focus,.cover-active .nav-wrapper-control a:hover{color:var(--text-light)}
	@media only screen and (min-width: 640px){.cover-active .nav-header li a{color:rgba(255,255,255,0.8)}}
	@media only screen and (min-width: 640px){.cover-active .nav-header li a:focus,.cover-active .nav-header li a:hover{color:var(--text-light)}}
	@media only screen and (min-width: 640px){.cover-active .nav-header li.active a{color:var(--text-light)}}









/* ---- ### blog footer -------- */
.nav-footer{
	position:relative;
	z-index:20;
	padding-top:calc(9.3rem + 8vw);
	padding-bottom:6.2rem;
	font-family:var(--site-font);
	font-weight: 400;
}
.nav-footer .inner{
	max-width:none;
	padding:0 8rem;
}
.nav-footer .nav-wrapper{
	/* display:flex; */
	/* padding:0 8rem; */
}
	@media only screen and (max-width: 640px){.nav-footer .nav-wrapper{flex-direction:column;text-align:center}}

.nav-footer ul{
	position:relative;
	/* display:flex; */
	width:100%;
	margin:0;
	padding:0;
	list-style:none;
}
	/* @media only screen and (max-width: 640px){.nav-footer ul{margin-bottom:3.1rem;justify-content:center}} */
.nav-footer ul:last-child{
	justify-content:flex-end
}

.nav-footer li{
	position:relative;
	/* display:flex; */
	font-size:1.4rem;
	line-height:3.1rem;
	margin-bottom:;
	text-align:center;
	color:rgba(250,250,250,0.3);
	color:var(--page-colour2);
}
.nav-footer li:last-child{
	/* margin-right:0 */
}

.nav-footer li a{
	/* display:block; */
	white-space:nowrap;
	text-overflow:ellipsis;
	text-decoration:none;
	color:inherit;
	cursor:pointer;
}
.nav-footer li.active a{
	/* color:var(--border-inverted); */
}
.nav-footer li a:focus,.nav-footer li a:hover{
	color:var(--border-inverted);
}


/* ---- #### footer national delete -------- */
.nav-footer ul li s{
	position:relative;
	display:inline-block;
	text-decoration: none;
}
/* ... */

